--- a/config
+++ b/config
@@ -1,23 +1,29 @@
-# i3 config file (v4)
-#
-# Please see https://i3wm.org/docs/userguide.html for a complete reference!
+
+
+ ________  ______             ______   ______   _________   ______   ________  __       ______   ______      
+/_______/\/_____/\           /_____/\ /_____/\ /________/\ /_____/\ /_______/\/_/\     /_____/\ /_____/\     
+\__.::._\/\:::_:\ \   _______\:::_ \ \\:::_ \ \\__.::.__\/ \::::_\/_\__.::._\/\:\ \    \::::_\/_\::::_\/_    
+   \::\ \    /_\:\ \ /______/\\:\ \ \ \\:\ \ \ \  \::\ \    \:\/___/\  \::\ \  \:\ \    \:\/___/\\:\/___/\   
+   _\::\ \__ \::_:\ \\__::::\/ \:\ \ \ \\:\ \ \ \  \::\ \    \:::._\/  _\::\ \__\:\ \____\::___\/_\_::._\:\  
+  /__\::\__/\/___\:\ '          \:\/.:| |\:\_\ \ \  \::\ \    \:\ \   /__\::\__/\\:\/___/\\:\____/\ /____\:\ 
+  \________\/\______/            \____/_/ \_____\/   \__\/     \_\/   \________\/ \_____\/ \_____\/ \_____\/                                                                                                                                                          
+                                                                                                                           _____      __    
+                                                                                                                          |__  /___  / /___ 
+                                                                                                                           /_ <_  / / / __ \
+                                                                                                                         ___/ // /_/_/ /_/ /
+                                                                                                                        /____//___(_)\____/ 
+                    
+
+
+
+
 
 set $mod Mod4
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-#font pango:System San Francisco Display 10
+##### FONT DEFINITION #######
+#############################
 
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
 font pango:Inconsolata 15
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
 
 
 # #---Basic Definitions---# #
@@ -183,6 +189,8 @@ bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws0
 
+#####WORKSPACE ICONS#####
+
 #set
 set $ws1 
 set $ws2 
@@ -194,16 +202,17 @@ set $ws7 
 set $ws8 
 set $ws9 (-_-)
 
+
+
 # Assign Workspaces:
-assign [class="Firefox"] $ws2
+assign [class="firefox"] $ws2
 assign [class="Spotify"] $ws4
 assign [class="Steam"] $ws6
 assign [class="gedit"] $ws7
 assign [class="Termite"] $ws1
 assign [class="barrier"] $ws9
-
-for_window [class="Spotify"] move to workspace $ws4
-
+assign [class="subl"] $ws3
+assign [class="vim"] $ws3
 
 
 
@@ -222,8 +231,11 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
+
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+
+
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
